change column to span element and add inline-block for css transitions

--- a/src/components/Column/styles.css
+++ b/src/components/Column/styles.css
@@ -1,13 +1,18 @@
 .base {
+  /* inline-block here allows us to use css-transitions on the span element */
+  display: inline-block;
+
   color: blue;
 }
 
 .highlighted {
   composes: base;
+
   font-size: 50px;
 }
 
 .notHighlighted {
   composes: base;
+
   font-size: 8px;
 }
